# AwtoMeet

./: .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.local.json
apps/api/: .env.example  Dockerfile  drizzle.config.ts  package.json  vitest.config.ts
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
apps/worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/worker/src/: buffer.py  captions.py  db.py  fanout.py  graph.py  main.py  settings.py  summary.py  transcription.py
apps/worker/tests/: test_buffer.py  test_captions.py  test_db_lifecycle.py  test_db_persist.py  test_fanout.py  test_graph.py  test_transcription.py
docs/: DEFINITION_OF_DONE.md  DEPENDENCIES.md  MODULES.md  ORDER.md  README.md  WORKTREES.md  ui-plan.md
docs/fix/: F01-worker-memory-buffer-sse.md  F02-guest-live-captions.md  F03-transcription-rejoin-misattribution.md  F04-timezone-fix.md
docs/modules/: M00-foundation.md  M01-db-schema.md  M02-shared-contracts.md  M10-auth-api.md  M11-auth-web.md  M12-agents-crud.md  M13-meeting-types-crud.md  M14-meetings-crud.md  M15-authz-helper.md  M20-livekit-join.md  M21-worker-skeleton.md  M22-worker-dispatch-wiring.md  M30-stt-stream.md  M31-buffer-persist.md  M32-sse-endpoint.md  M33-insights-dashboard.md  M34-live-captions.md  (+11 more)
scripts/: bootstrap.sh
(+123 files in other folders)
